--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,18 +2,15 @@ services:
   web-app:
     build: .
     command: gunicorn src.wsgi:application --bind 0.0.0.0:${APP_PORT}
-    env_file:
-      - .env.prod
+    env_file: .env
     volumes:
       - static:/app/src/staticfiles
-    expose:
-      - ${APP_PORT}
     depends_on:
       - db
       - redis
 
   db:
-    image: postgres:16
+    image: postgres:16-alpine3.21
     hostname: database
     environment:
       - POSTGRES_USER=${DB_USER}
@@ -25,7 +22,18 @@ services:
       - data:/var/lib/postgresql/data
 
   redis:
-    image: redis:7.4.0
+    image: redis:7.4-alpine3.20
+
+  caddy:
+    image: caddy:2.9-alpine
+    env_file: .env
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./Caddyfile:/etc/caddy/Caddyfile:ro
+      - caddy-data:/data
+      - caddy-config:/config
 
   celery-worker:
     build: .
@@ -33,8 +41,7 @@ services:
     command: celery -A src worker --loglevel=info
     volumes:
       - ./src/:/app/src/
-    env_file:
-      - .env
+    env_file: .env
     depends_on:
       - db
       - redis
@@ -42,6 +49,5 @@ services:
 volumes:
   data:
   static:
-  certs:
-  html:
-  acme:
+  caddy-data:
+  caddy-config:
