--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     image: postgres:16-alpine3.21
     hostname: database
     environment:
-      - POSTGRES_PASSWORD=${DB_PASSWORD}
+      - POSTGRES_PASSWORD=postgres
     ports:
       - "5432:5432"
     volumes:
@@ -32,7 +32,7 @@ services:
     volumes:
       - ./src/:/app/src/
     env_file:
-      - .env
+      - dev.env
     depends_on:
       - db
       - redis
