--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,8 @@ on:
     branches: main
 
 jobs:
-  run-tests:
+
+  build:
     name: python
     runs-on: ubuntu-latest
 
@@ -23,5 +24,8 @@ jobs:
       - name: Install the project
         run: uv sync --all-extras --dev
 
+      - name: Build project
+        run: docker compose up -d
+
       - name: Run tests
-        run: uv run pytest tests
+        run: docker compose exec web-app pytest
