--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,5 +23,7 @@ dependencies = [
     "hiredis>=3.1.0",
     "gunicorn>=23.0.0",
     "django-redis>=5.4.0",
+    "pytest-factoryboy>=2.7.0",
+    "django-filter>=25.1",
 ]
 
