add postgres variables .env.example

--- a/environments/.env.example
+++ b/environments/.env.example
@@ -25,3 +25,8 @@ DB_PASSWORD=postgres
 REDIS_DB=0
 REDIS_HOST=redis
 REDIS_PORT=6379
+
+# Postgres envs
+POSTGRES_USER=postgres
+POSTGRES_DB=postgres
+POSTGRES_PASSWORD=postgres
